# xnor_net_pytorch

./: .gitignore  main.py  pyproject.toml  trainer.py
components/: bin.py  block.py
models/: basic_net.py  gxnor_net.py  gxnor_resnet.py  xnor_mobilenetv3.py  xnor_net.py  xnor_resnet.py
